# ffnx-migration-tool

./: CMakeLists.txt
doc/: demaster.md  tonberry.md
qml/: Main.qml
src/: main.cpp  qmain.cpp  qmain.h
src/core/: converter.cpp  converter.h  data.cpp  data.h  texturepaths.cpp  texturepaths.h
